fix footer layout issue

--- a/src/TheDevSpaceWebApp/wwwroot/css/site.css
+++ b/src/TheDevSpaceWebApp/wwwroot/css/site.css
@@ -14,7 +14,6 @@ html
 }
 
 body {
-    margin-bottom: 60px;
     background-color: var(--background-color);
     color: var(--text-color);
     font-family: 'Poppins', sans-serif;
@@ -57,6 +56,7 @@ body {
     background-color: var(--background-color-nav);
     color: var(--text-color);
     box-shadow: 0px 0px 5px #3b3b3b;
+    padding: 30px 0px;
 }
 
 .box-center {
